# docsrs-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md
src/: cargo_lock.rs  error.rs  main.rs  server.rs
src/docs/: cache.rs  fetcher.rs  index.rs  mod.rs  parser.rs  render.rs
