[package]
name = "rust-docs-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Rust crate documentation from docs.rs"

[dependencies]
cargo-lock = "10"
reqwest = { version = "0.12", features = ["gzip"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
rustdoc-types = "0.56"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
