[package]
name = "docsrs-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Rust crate documentation from docs.rs"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/dmvk/docsrs-mcp"
keywords = ["mcp", "rust", "documentation", "docs-rs", "rustdoc"]
categories = ["development-tools"]
exclude = [".github/", "CLAUDE.md", "/docs/"]

[dependencies]
cargo-lock = "11"
dirs = "6"
reqwest = { version = "0.12", features = ["gzip"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
rustdoc-types = "0.56"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
